--- a/src/App.css
+++ b/src/App.css
@@ -132,6 +132,49 @@
 .details-top h4 i{
   color: #FCCB00;
 }
+.no-gutters img{
+  width: 450px;
+  height: 300px;
+  border-radius: 5px;
+}
+.search .card{
+  border-bottom: 1px solid #ddd;
+  padding: 40px 0;
+}
+.search .card:last-child{
+  border: 0;
+}
+.search{
+  margin: 50px 0;
+}
+.search nav{
+  margin: 0 auto;
+  width: 100px;
+}
+
+/* login */
+.login-form {
+  width: 340px;
+  margin: 50px auto;
+  font-size: 15px;
+}
+.login-form form {
+  margin-bottom: 15px;
+  background: #f7f7f7;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
+  padding: 30px;
+}
+.login-form h2 {
+  margin: 0 0 15px;
+}
+.login-form .form-control, .btn {
+  min-height: 38px;
+  border-radius: 2px;
+}
+.login-form .btn {        
+  font-size: 15px;
+  font-weight: bold;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
